<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureNotes</string>

    <string name="secure_notes">Secure Notes</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="register_user">Registrar</string>

    <string name="welcome_secure_notes">Bienvenido a Secure Notes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user_registration">Registro de Usuario</string>
</resources>